tests/ui/lifetimes/point-at-lifetime-obligation-from-trait-in-trait-object.stderr
error[E0478]: lifetime bound not satisfied
  --> $DIR/point-at-lifetime-obligation-from-trait-in-trait-object.rs:4:21
   |
LL |     broken: Box<dyn Any + 'a>
   |                     ^^^   ^^
   |
note: lifetime parameter instantiated with the lifetime `'a` as defined here
  --> $DIR/point-at-lifetime-obligation-from-trait-in-trait-object.rs:3:18
   |
LL | struct Something<'a> {
   |                  ^^
   = note: but lifetime parameter must outlive the static lifetime
note: `'static` requirement introduced here
  --> $SRC_DIR/core/src/any.rs:LL:COL

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0478`.
